--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -14,7 +14,7 @@
         android:layout_width="340dp"
         android:layout_height="75dp"
         android:layout_marginStart="32dp"
-        android:layout_marginBottom="172dp"
+        android:layout_marginBottom="204dp"
         android:text="@string/play_online"
         app:cornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,6 +90,21 @@
         tools:visibility="invisible" />
 
 
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="340dp"
+        android:alpha="0"
+        android:ems="10"
+        android:hint="@string/username"
+        android:inputType="textPersonName"
+        android:textColor="@color/dark_blue"
+        android:textColorHint="@color/dark_blue"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="invisible" />
+
     <ImageButton
         android:id="@+id/hostBackButton"
         android:layout_width="80dp"
@@ -107,11 +122,11 @@
         android:id="@+id/cardView"
         android:layout_width="210dp"
         android:layout_height="210dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginBottom="50dp"
         app:cardCornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/play_solo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:id="@+id/playerIcon"
@@ -125,19 +140,20 @@
             app:srcCompat="@color/material_dynamic_neutral30"
             tools:srcCompat="@tools:sample/avatars" />
 
+        <ImageButton
+            android:id="@+id/editIconButton"
+            android:layout_width="64dp"
+            android:layout_height="62dp"
+            android:layout_marginStart="152dp"
+            android:layout_marginTop="156dp"
+            android:backgroundTint="#00FFFFFF"
+            android:outlineAmbientShadowColor="#00FFFFFF"
+            android:outlineSpotShadowColor="#00FFFFFF"
+            android:scaleType="fitCenter"
+            android:translationZ="10dp"
+            app:layout_constraintStart_toStartOf="@+id/playerIcon"
+            app:layout_constraintTop_toTopOf="@+id/playerIcon"
+            app:srcCompat="@android:drawable/ic_menu_edit" />
     </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/usernameTextView"
-        android:layout_width="334dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="Username"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
