--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -25,6 +25,7 @@
         android:layout_height="67dp"
         android:layout_marginBottom="128dp"
         android:text="@string/start"
+        android:visibility="visible"
         app:cornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,5 +67,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_back"
         app:tint="?attr/colorPrimaryVariant" />
+
+    <ProgressBar
+        android:id="@+id/hostWaitingBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="72dp"
+        android:layout_height="68dp"
+        android:layout_marginBottom="112dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/waitingText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:text="@string/waiting_for_host"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hostWaitingBar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
