--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -123,10 +123,11 @@
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
-                android:id="@+id/imageButton10"
+                android:id="@+id/orangeThemeButton"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
+                android:backgroundTint="#8DD37506"
                 android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
