--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -117,4 +117,21 @@
         <item name="android:textColor">@color/purple_haze</item>
 
     </style>
+
+    <style name="Theme.TriviaChance.Orange">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/orange</item>
+        <item name="colorPrimaryVariant">@color/orange</item>
+        <item name="colorOnPrimary">@color/orange_pewter</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/red_orange</item>
+        <item name="colorSecondaryVariant">@color/red_orange</item>
+        <item name="colorOnSecondary">@color/orange_pewter</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
+        <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/orange_pewter</item>
+        <item name="android:textColor">@color/taupe</item>
+
+    </style>
 </resources>
