--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -129,14 +129,17 @@
                 android:layout_marginHorizontal="10dp"
                 android:backgroundTint="#8DD37506"
                 android:contentDescription="@string/locked_item"
+                android:onClick="changeTheme"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
-                android:id="@+id/imageButton11"
+                android:id="@+id/forestThemeButton"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
+                android:backgroundTint="#8C00493A"
                 android:contentDescription="@string/locked_item"
+                android:onClick="changeTheme"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
         </TableRow>
