--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TriviaChance" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.TriviaChance" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/dark_blue</item>
         <item name="colorPrimaryVariant">@color/blue_grey</item>
@@ -115,6 +115,7 @@
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/purple_charcoal</item>
         <item name="android:textColor">@color/purple_haze</item>
+        <item name="android:textColorPrimary">@color/purple_haze</item>
 
     </style>
 
