--- a/app/src/main/res/layout/player_card.xml
+++ b/app/src/main/res/layout/player_card.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/user_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="214dp"
+        android:layout_height="29dp"
         android:layout_marginStart="32dp"
         android:text="Playername"
         android:textSize="20sp"
